--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@ $(document).ready(function(){
 													<p>
 														<style> { text-decoration: none; } </style>
 														<div style="font-size: 30px;">
-														<a href="https://orcid.org/0000-0001-7325-7382" target="_blank" class="fas fa-university" style="text-decoration: none;" data-toggle="tooltip" title="King College London"><span class="label"></span></a> <span style="padding-left:15px">
+														<a href="https://www.kcl.ac.uk/people/joseph-burgoyne" target="_blank" class="fas fa-university" style="text-decoration: none;" data-toggle="tooltip" title="King College London"><span class="label"></span></a> <span style="padding-left:15px">
 														<a href="https://orcid.org/0000-0001-7325-7382" target="_blank" class="fab fa-orcid" style="text-decoration: none;" data-toggle="tooltip" title="Orcid"><span class="label"></span></a> <span style="padding-left:15px">
-														<a href="#" target="_blank" class="fas fa-user-graduate" style="text-decoration: none;" data-toggle="tooltip" title="Google Scholar"><span class="label"></span></a> <span style="padding-left:15px">
-														<a href="#" target="_blank" class="fab fa-researchgate" style="text-decoration: none;" data-toggle="tooltip" title="Researchgate"><span class="label"></span></a> <span style="padding-left:15px">
-														<a href="#" target="_blank" class="fab fa-linkedin" style="text-decoration: none;" data-toggle="tooltip" title="LinkedIn"><span class="label"></span></a> <span style="padding-left:15px"> <br />
+														<a href="https://scholar.google.co.uk/citations?user=4jqkLFwAAAAJ&hl=en" target="_blank" class="fas fa-user-graduate" style="text-decoration: none;" data-toggle="tooltip" title="Google Scholar"><span class="label"></span></a> <span style="padding-left:15px">
+														<a href="https://www.researchgate.net/profile/Joseph_Burgoyne" target="_blank" class="fab fa-researchgate" style="text-decoration: none;" data-toggle="tooltip" title="Researchgate"><span class="label"></span></a> <span style="padding-left:15px">
+														<a href="https://www.linkedin.com/in/joseph-burgoyne-00996426/?originalSubdomain=uk" target="_blank" class="fab fa-linkedin" style="text-decoration: none;" data-toggle="tooltip" title="LinkedIn"><span class="label"></span></a> <span style="padding-left:15px"> <br />
 														<script>
 														$(document).ready(function(){
   					 									$('[data-toggle="tooltip"]').tooltip();   
