--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ $(document).ready(function(){
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#intro">Introduction</a></li>
+								<li><a href="#intro">Research</a></li>
 								<li><a href="#main">Refences</a></li>
 								<li><a href="#highlights">Funding</a></li>
 								<li><a href="#footer">Contact</a></li>
@@ -104,9 +104,9 @@ $(document).ready(function(){
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<div class="title">Introduction</div>
+					<div class="title">Research Insterest</div>
 					<div class="container">
-						<p class="style1">Research interests</p>
+						<!-- <p class="style1">Research interests</p> -->
 						<p class="style3">Lab info</p>
 					</div>
 				</section>
