--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ $(document).ready(function(){
 				<section id="highlights" class="wrapper style3">
 					<div class="title">Funding</div>
 					<div class="container">
-						<p class="style1">Recent funding</p>
-						<p class="style3">Funding info</p>
+						<p class="style1">Present and Past Funding</p>
+						<!-- <p class="style3">Funding info</p> -->
 					</div>
 				</section>
 
