--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@ $(document).ready(function(){
 					<div class="container">
 						<p class="style1">Present and Past Funding</p>
 						<!-- <p class="style3">Funding info</p> -->
+						<img src="assets/funders/BHF.png" height="25%" width="25%" /> <span style="padding-left:100px">
+						<img src="assets/funders/Wellcome.png" height="25%" width="25%" /> <span style="padding-left:40px">
 					</div>
 				</section>
 
