--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ $(document).ready(function(){
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#intro">Research</a></li>
+								<li><a href="#intro">Research</a></li> <br>
 								<li><a href="#main">Refences</a></li>
-								<li><a href="#highlights">Funding</a></li>
+								<li><a href="#highlights">Funding</a></li> <br>
 								<li><a href="#footer">Contact</a></li>
 							</ul>
 						</nav>
