--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ $(document).ready(function(){
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#intro">Research</a></li> <br>
+								<li><a href="#intro">Research</a></li>
 								<li><a href="#main">Refences</a></li>
-								<li><a href="#highlights">Funding</a></li> <br>
+								<li><a href="#highlights">Funding</a></li>
 								<li><a href="#footer">Contact</a></li>
 							</ul>
 						</nav>
@@ -106,9 +106,9 @@ $(document).ready(function(){
 				<section id="intro" class="wrapper style1">
 					<div class="title">Research Insterest</div>
 					<div class="container">
-						<p class="style1">Interest 1
+						<p class="style1">Interest 1 <br>
 						<class="style3">Interest 1 info</p>
-						<p class="style1">Interest 2
+						<p class="style1">Interest 2 <br>
 						<class="style3">Interest 2 info</p>
 					</div>
 				</section>
