--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ $(document).ready(function(){
 				<section id="intro" class="wrapper style1">
 					<div class="title">Research Insterest</div>
 					<div class="container">
-						<class="style1">Interest 1
-						<class="style3">Interest 1 info
+						<p class="style1">Interest 1 </p>
+						<p class="style3">Interest 1 info </p>
 						<class="style1">Interest 2 <br>
 						<p><class="style3">Interest 2 info </p>
 					</div>
