--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ $(document).ready(function(){
 					<div class="container">
 						<p class="style1">Interest 1 </p>
 						<p class="style3">Interest 1 info </p>
-						<class="style1">Interest 2 <br>
-						<p><class="style3">Interest 2 info </p>
+						<p class="style1">Interest 2 </p>
+						<p class="style3">Interest 2 info </p>
 					</div>
 				</section>
 
