--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $(document).ready(function(){
 					<div class="title">Research Insterest</div>
 					<div class="container">
 						<p class="style1">Interest 1 </p>
-						<p class="style3">Interest 1 info </p>
+						<p class="style3">Interest 1 info </p>  { margin-top: -20px; }
 						<p class="style1">Interest 2 </p>
 						<p class="style3">Interest 2 info </p>
 					</div>
