--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@ $(document).ready(function(){
 						<p class="style3">Interest 1 info </p>  <span style="padding-left:15px">
 						<p class="style1">Interest 2 </p>
 						<p class="style3">Interest 2 info </p>
+						<h7 style="font-size: 30px"> Interest 1 </h7>
+						<p class="style3">Interest 1 info </p> <br/>
+						<h7 style="font-size: 30px"> Interest 2 </h7>
+						<p class="style3">Interest 2 info </p> <br/>
 					</div>
 				</section>
 
