--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Joe Burgoyne Lab</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1 />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/bc57d02b5e.js" crossorigin="anonymous"></script>
 		
