--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ $(document).ready(function(){
 
 													<h3 class="icon solid fa-envelope">Email</h3>
 													<!-- <p> -->
-														<a href="#">joseph.r.burgoyne@kcl.ac.uk </a>
+														<a href="mailto:joseph.r.burgoyne@kcl.ac.uk">joseph.r.burgoyne@kcl.ac.uk </a>
 													</p>
 												</section>
 											</div>
