--- a/index.html
+++ b/index.html
@@ -146,42 +146,13 @@ $(document).ready(function(){
 				<section id="footer" class="wrapper">
 					<div class="title">Contact</div>
 					<div class="container">
-						<div class="row">
-							<!-- <div class="col-3 col-12-medium"> -->
-
-								<!-- Contact Form -->
-									<!-- <section>
-										<form method="post" action="#">
-											<div class="row gtr-50">
-												<div class="col-6 col-12-small">
-													<input type="text" name="name" id="contact-name" placeholder="Name" />
-												</div>
-												<div class="col-6 col-12-small">
-													<input type="text" name="email" id="contact-email" placeholder="Email" />
-												</div>
-												<div class="col-12">
-													<textarea name="message" id="contact-message" placeholder="Message" rows="4"></textarea>
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><input type="submit" class="style1" value="Send" /></li>
-														<li><input type="reset" class="style2" value="Reset" /></li>
-													</ul>
-												</div>
-											</div>
-										</form>
-									</section> -->
-
-							</div>
-							<div class="col-6 col-10-medium">
-
 								<!-- Contact -->
+
 									<section class="feature-list small">
-										<div class="row gtr-50">
-											<!-- <div class="col-4 col-12-small"> -->
-											<div class="col-4 col-12-small">
-												<section>
-													<h3 class="icon solid fa-home">Address</h3>
+										<div class="row">
+											<div class="col-6 col-12-small">
+											<section>
+													<h3 class="icon solid fa-home" style="padding-left:30px> <span style="font-family:Arial; font-weight: 600;">Address</span></h3> 
 													<p>
 														King College Lodnon<br />
 														St Thomas' Hospital<br />
@@ -189,50 +160,42 @@ $(document).ready(function(){
 														London SE1 7EH<br />
 														United Kingdom
 													</p>
-												</section>
+											</section>
 											</div>
-											<div class="col-4 col-12-small">
-												<section>
-													<h3 class="fas fa-link"> <span style="font-family:Arial; font-weight: 600;"> Link </span></h3>
+											<div class="col-6 col-12-small">
+											<section>
+													<h3 class="icon solid fa-link"> Link </span></h3> 
 													<p>
-														<style> { text-decoration: none; } </style>
-														<div style="font-size: 30px;">
+
+														<div style="font-size: 1.5em;">
 														<a href="https://www.kcl.ac.uk/people/joseph-burgoyne" target="_blank" class="fas fa-university" style="text-decoration: none;" data-toggle="tooltip" title="King College London"><span class="label"></span></a> <span style="padding-left:15px">
 														<a href="https://orcid.org/0000-0001-7325-7382" target="_blank" class="fab fa-orcid" style="text-decoration: none;" data-toggle="tooltip" title="Orcid"><span class="label"></span></a> <span style="padding-left:15px">
 														<a href="https://scholar.google.co.uk/citations?user=4jqkLFwAAAAJ&hl=en" target="_blank" class="fas fa-user-graduate" style="text-decoration: none;" data-toggle="tooltip" title="Google Scholar"><span class="label"></span></a> <span style="padding-left:15px">
 														<a href="https://www.researchgate.net/profile/Joseph_Burgoyne" target="_blank" class="fab fa-researchgate" style="text-decoration: none;" data-toggle="tooltip" title="Researchgate"><span class="label"></span></a> <span style="padding-left:15px">
 														<a href="https://www.linkedin.com/in/joseph-burgoyne-00996426/?originalSubdomain=uk" target="_blank" class="fab fa-linkedin" style="text-decoration: none;" data-toggle="tooltip" title="LinkedIn"><span class="label"></span></a> <span style="padding-left:15px"> <br />
+
 														<script>
 														$(document).ready(function(){
   					 									$('[data-toggle="tooltip"]').tooltip();   
 														});
-														</script>
-												 <!--	</p>
-												</section>
-											<!-- </div> -->
-											<!-- <div class="col-6 col-12-small"> 
-												<section>	-->																										<p>
-													<div style="font-size: 16px;">
+														</script>	
+														</div>
+													</p>
+													<br />
+													<p>
 
+				
 													<h3 class="icon solid fa-envelope">Email</h3>
-													<!-- <p> -->
+
 														<a href="mailto:joseph.r.burgoyne@kcl.ac.uk">joseph.r.burgoyne@kcl.ac.uk </a>
 													</p>
-												</section>
+											
+
+											</section>
 											</div>
-											<!--	<div class="col-4 col-12-small">
-												<section>
-													<h3 class="icon solid fa-phone">Phone</h3>
-													<p>
-														(000) 555-0000
-													</p>
-												</section>
-											</div>  -->
 										</div>
 									</section>
 
-							</div>
-						</div>
 						<div id="copyright">
 							<ul>
 								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
