--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@ $(document).ready(function(){
 				<section id="intro" class="wrapper style1">
 					<div class="title">Research Insterest</div>
 					<div class="container">
-						<h7 style="font-size: 30px"> Interest 1 </h7>
+						<h7 style="font-size: 1.6em"> Interest 1 </h7>
 						<p class="style3">Interest 1 info </p> <br/>
-						<h7 style="font-size: 30px"> Interest 2 </h7>
+						<h7 style="font-size: 1.6em"> Interest 2 </h7>
 						<p class="style3">Interest 2 info </p> <br/>
 					</div>
 				</section>
