--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ $(document).ready(function(){
 
 						<div id="copyright">
 							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Joe Burgoyne.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</div>
