--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dr Joe Burgoyne Lab</title>
+		<title>Dr Joe Burgoyne's Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 
@@ -89,7 +89,7 @@ $(document).ready(function(){
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Dr Joe Burgoyne Lab</a></h1>
+							<h1><a href="index.html">Dr Joe Burgoyne's Lab</a></h1>
 							<p>Senior Lecturer <br /> 
 							King's College London</p>
 						</div>
