--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ $(document).ready(function(){
 						<nav id="nav">
 							<ul>
 								<li><a href="#intro">Research</a></li>
-								<li><a href="#main">Refences</a></li>
+								<li><a href="#main">References</a></li>
 								<li><a href="#highlights">Funding</a></li>
 								<li><a href="#footer">Contact</a></li>
 							</ul>
@@ -158,7 +158,7 @@ $(document).ready(function(){
 											
 													<h3 class="icon solid fa-home"> Address </h3> </span>
 													<p>
-														King College Lodnon<br />
+														King's College London<br />
 														St Thomas' Hospital<br />
 														Westminster Bridge Road<br />
 														London SE1 7EH<br />
@@ -192,7 +192,7 @@ $(document).ready(function(){
 													<div style="font-size: 1.2em;">
 													<h3 class="icon solid fa-envelope">Email</h3>
 
-													<a href="mailto:joseph.r.burgoyne@kcl.ac.uk">joseph.r.burgoyne@kcl.ac.uk </a>
+													<a href="mailto:joseph.r.burgoyne@kcl.ac.uk">joseph.burgoyne@kcl.ac.uk </a>
 													</div>
 											
 
