--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ $(document).ready(function(){
 													<div style="font-size: 1.2em;">
 													<h3 class="icon solid fa-envelope">Email</h3>
 
-													<a href="mailto:joseph.r.burgoyne@kcl.ac.uk">joseph.burgoyne@kcl.ac.uk </a>
+													<a href="mailto:joseph.burgoyne@kcl.ac.uk">joseph.burgoyne@kcl.ac.uk </a>
 													</div>
 											
 
